tests/blob/field_get_faulty.sy
A :: blob { a: int }
a := A { a: 1 }

start :: fn do
    a.b = a.b + 1
end

// error: $MissingField
